[project]
name = "data-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.1.0",
    "alive-progress>=3.2.0",
    "asyncua==1.1.5",
    "h5py>=3.8.0",
    "matplotlib>=3.10.3",
    "nidaqmx>=0.8.0",
    "numpy>=1.23.0",
    "scipy>=1.15.3",
]

[dependency-groups]
dev = [
    "cython>=3.1.2",
    "ruff>=0.11.13",
]
